--- a/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutCart.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutCart.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Kiểm Tra Giỏ Hàng";
+    ViewBag.Title = "Kiểm Tra Giỏ Hàng - hangtotgiasi.com";
     Layout = "~/Views/Shared/_ContactLayout.cshtml";
     ViewBag.PageTitle = "Kiểm Tra Giỏ Hàng";
 }
