--- a/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutComplete.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutComplete.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Đặt Hàng Thành Công";
+    ViewBag.Title = "Đặt Hàng Thành Công - hangtotgiasi.com";
     Layout = "~/Views/Shared/_ContactLayout.cshtml";
 }
 
