--- a/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep1.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep1.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Nhập Địa Chỉ - Kiểm Tra Giỏ Hàng";
+    ViewBag.Title = "Nhập Địa Chỉ - Kiểm Tra Giỏ Hàng - hangtotgiasi.com";
     Layout = "~/Views/Shared/_ContactLayout.cshtml";
 }
 @model ShopOnline.Models.CartViewModel
