--- a/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep2.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep2.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Phương Thức Giao Hàng - Kiểm Tra Giỏ Hàng";
+    ViewBag.Title = "Phương Thức Giao Hàng - Kiểm Tra Giỏ Hàng - hangtotgiasi.com";
     Layout = "~/Views/Shared/_ContactLayout.cshtml";
 }
 
