--- a/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep3.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep3.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Phương Thức Thanh Toán - Kiểm Tra Giỏ Hàng";
+    ViewBag.Title = "Phương Thức Thanh Toán - Kiểm Tra Giỏ Hàng - hangtotgiasi.com";
     Layout = "~/Views/Shared/_ContactLayout.cshtml";
 }
 <div class="col-md-9 clearfix" id="checkout">
