--- a/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep4.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Cart/CheckOutStep4.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Xem lại Đơn Hàng";
+    ViewBag.Title = "Xem lại Đơn Hàng - hangtotgiasi.com";
     Layout = "~/Views/Shared/_ContactLayout.cshtml";
 }
 @using ShopOnline.Extension
