--- a/Code/ShopOnline/ShopOnline/Views/Contact/Contact.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Contact/Contact.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Liên Hệ - Hangtotgiasi.com - Hàng Tốt - Hàng Rẻ - Hàng Đẹp - Giá Sỉ - Mua Buôn - Hàng Hóa - Quần Áo - Hàng Tiêu Dùng - Thời Trang";
     Layout = "~/Views/Shared/_ContactLayout.cshtml";
 }
 @model ShopOnline.App_Data.Config
