--- a/Code/ShopOnline/ShopOnline/Views/Helper/RenderLoginBar.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/Helper/RenderLoginBar.cshtml
@@ -6,5 +6,5 @@
 else
 {
     <a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-sign-in"></i><span class="hidden-xs text-uppercase">Đăng Nhập</span></a>
-    <a href="@Url.Action("SignUpPage", "Contact")"><i class="fa fa-user"></i><span class="hidden-xs text-uppercase">Đăng Ký</span></a>
+    <a href="@Url.RouteUrl("NewSignUp")"><i class="fa fa-user"></i><span class="hidden-xs text-uppercase">Đăng Ký</span></a>
 }
