--- a/Code/ShopOnline/ShopOnline/Views/ProductList/Index.cshtml
+++ b/Code/ShopOnline/ShopOnline/Views/ProductList/Index.cshtml
@@ -1,26 +1,30 @@
 ﻿@{
-    ViewBag.Title = "Các Sản Phẩm";
+    ViewBag.Title = "Hàng Tốt - Hàng Rẻ - Hàng Đẹp - Giá Sỉ - Mua Buôn - Hàng Hóa - Quần Áo - Hàng Tiêu Dùng - Thời Trang";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.PageTitle = "Các Sản Phẩm";
 }
 @model ShopOnline.Models.ProductListFilterViewModel
-@Html.HiddenFor(x=>x.FilterCategoryId)
-@Html.HiddenFor(x=>x.FilterColorIds)
-@Html.HiddenFor(x=>x.FilterBrandIds)
+@Html.HiddenFor(x => x.FilterCategoryId)
+@Html.HiddenFor(x => x.FilterColorIds)
+@Html.HiddenFor(x => x.FilterBrandIds)
 @*<p class="text-muted lead">In our Ladies department we offer wide selection of the best products we have found and carefully selected worldwide. Pellentesque habitant morbi tristique senectus et netuss.</p>*@
+<div class="box-sort">
+    @Html.DropDownList("sortCondition",Model.Sorts,new {@class="form-control"})
+   
+</div>
 
-                        <div id="products" class="row products">
-                            <!-- /.col-md-4 -->
-                        </div>
-                        <!-- /.products -->
+<div id="products" class="row products">
+    <!-- /.col-md-4 -->
+</div>
+<!-- /.products -->
 
-                        
+
 
 
 <div class="pages">
 
     <p class="loadMore">
-        <a href="#" id="btn-load-more" class="btn btn-template-main"><i class="fa fa-chevron-down"></i> Xem Thêm</a>
+        <a href="#" id="btn-load-more" class="btn btn-template-main"><i class="fa fa-chevron-down"></i>Xem Thêm</a>
     </p>
 
     @* <ul class="pagination">
@@ -52,5 +56,5 @@
 @section scripts
 {
     <script src="@Url.Content("~/Content/lazyload/scrollpagination.js")"></script>
-     <script src="@Url.Content("~/Scripts/app/front/product.detail.js")"></script>
+    <script src="@Url.Content("~/Scripts/app/front/product.detail.js")"></script>
 }
